# snake

./: README.md
snakes/: CMakeLists.txt  main.cpp
snakes/include/: ctrl.h  direction.h  food.h  interface.h  map.h  point.h  snake.h  tool.h
snakes/src/: ctrl.cpp  food.cpp  map.cpp  point.cpp  snake.cpp  tool.cpp
